add op cat blog

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -6,12 +6,12 @@ endi:
 
 yangshun:
   name: Yangshun Tay
-  title: Front End Engineer @ Facebook
+  title: Front End Engineer @ Ethereum
   url: https://github.com/yangshun
   image_url: https://github.com/yangshun.png
 
 slorber:
   name: Sébastien Lorber
-  title: Docusaurus maintainer
+  title: Bitcoin maintainer
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
